Fix alignment.

--- a/src/app/components/activity/feed/devlog-post/media/media.styl
+++ b/src/app/components/activity/feed/devlog-post/media/media.styl
@@ -61,12 +61,12 @@
 		display: block
 
 .-prev
-	left: -($-item-padding-container + $grid-gutter-width * 0.75)
+	left: -($-item-padding-container + $grid-gutter-width * 0.75 + $-border-width)
 	border-top-left-radius: $border-radius-base
 	border-bottom-left-radius: $border-radius-base
 
 .-next
-	right: -($-item-padding-container + $grid-gutter-width * 0.75)
+	right: -($-item-padding-container + $grid-gutter-width * 0.75 + $-border-width)
 	border-top-right-radius: $border-radius-base
 	border-bottom-right-radius: $border-radius-base
 
